NAATI-k8smanifest/ncms/ncms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-ncms
  labels:
    helm.sh/chart: ncms-0.1.0
    app.kubernetes.io/name: ncms
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"

spec:
  loadBalancerIP: 10.50.4.100

  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ncms
    app.kubernetes.io/instance: dev
